# spot-the-glitch

./: .dependency-cruiser.cjs  .gitignore  .ncurc.json  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  knip.json  package.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-17-lewm-pipeline.md
docs/superpowers/specs/: 2026-04-17-lewm-pipeline-design.md
public/: quiz-data.json
scripts/: .gitignore  README.md  generate.py  pyproject.toml  setup.sh
scripts/pipeline/: config.py  curate.py  export.py  glitch.py  lewm_loader.py  score.py  simulate.py
scripts/schema/: quiz-data.schema.json
scripts/tests/: test_curate.py  test_export.py  test_glitch.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/og/: route.tsx
src/app/play/: page.tsx
src/app/result/: page.tsx
src/entities/quiz/: index.ts
src/entities/user/: index.ts
src/features/answer-question/: index.ts
src/features/share-result/: index.ts
src/features/track-score/: index.ts
src/shared/config/: index.ts
src/shared/lib/__tests__/: cn.test.ts
src/shared/types/: index.ts  quiz.ts
src/shared/ui/: button.tsx  card.tsx  container.tsx  index.ts  typography.tsx
src/views/home/: index.ts
src/views/quiz/: index.ts
src/views/result/: index.ts
src/widgets/quiz-player/: index.ts
src/widgets/score-display/: index.ts
src/widgets/surprise-chart/: index.ts
